--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <plugin>
-    <id>election</id>
-    <name>Election</name>
+    <id>elections</id>
+    <name>Elections</name>
     <description>Online Election System</description>
-    <version>2.3.1</version>
+    <version>0.1.0</version>
     <glfusionversion>1.7.8</glfusionversion>
     <phpversion>7.2.0</phpversion>
     <url>http://www.glfusion.org</url>
