--- a/plugin.xml
+++ b/plugin.xml
@@ -6,5 +6,5 @@
     <glfusionversion>1.7.8</glfusionversion>
     <phpversion>7.2.0</phpversion>
     <url>http://www.glfusion.org</url>
-    <maintainer>Mark R. Evans</maintainer>
+    <maintainer>Lee P. Garner</maintainer>
 </plugin>
